# eshutdown

./: .gitignore  Makefile.am  autogen.sh  configure.ac  messages.pot
debian/: changelog  control  copyright  rules
po/: Makefile.am  de.po  ru.po  uk.po
src/: Makefile.am  eshutdown.c
themes/: Makefile.am  eshutdown.edc  eshutdown.edj
